styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.btn-footer {
  background-color: gray;
  color: #ffffff;
  width: 200px;
  padding: 10px 20px;
  border-radius: 20px;
  font-size: x-large;
}

.strike-text{
  width: 100%;
  text-align: left;
  border-radius: 2px;
  border-bottom: 3px solid #A7A098;
  line-height: 0.1em;
  margin: 10px 0 20px;
}

.strike-text span {
  background: #fff;
  padding: 0 10px;
}

.slick-dots li button:before {
  color: black !important;
}

.slick-dots li.slick-active button:before {
  color: black!important;;
 }

 .slick-dots {
  top:86vh;
}

